--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,19 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  padding: 0%;
+  margin: 0;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 :root {
   --background: #ffffff;
@@ -19,11 +34,7 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 
 .material-symbols-outlined {
   @apply cursor-pointer text-3xl;
