Se agregó estilos para el login

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,7 @@
 @tailwind utilities;
 
 *{
-  padding: 0%;
-  margin: 0;
+  font-family: Arial, sans-serif;
 }
 
 body{
@@ -34,8 +33,12 @@ body{
   }
 }
 
-
-
 .material-symbols-outlined {
   @apply cursor-pointer text-3xl;
+}
+
+@layer utilities {
+  .text-shadow {
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+  }
 }
