--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ body{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
 }
 
