--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,19 @@
 @tailwind components;
 @tailwind utilities; */
 
-*{
+* {
   font-family: Arial, sans-serif;
 }
 
-body{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  overflow-y: auto;
-  min-height: 100vh
+body {
+  min-height: 100vh;
+  background-color: #f3f4f6;
+}
+
+main {
+
+  padding-top: 4rem;
+  min-height: 100vh;
 }
 
 :root {
