--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,8 @@ body{
   flex-direction: column;
   height: 100%;
   overflow-y: auto;
-  min-height: 100vh
+  min-height: 100vh;
+  background-color: #f3f4f6;
 }
 
 :root {
